--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
 - '8'
+env:
+- AETERNITY_EPOCH_API_URL="//test-net-api.aepps.com/api/"
 install:
 - npm install
 script:
@@ -16,6 +18,11 @@ deploy:
   script: rsync -r --delete-after -v $TRAVIS_BUILD_DIR/dist/* deploy@139.59.142.164:/var/www/html/stage-explorer.aepps.com/
   on:
     branch: stage
+- provider: script
+  skip_cleanup: true
+  script: rsync -r --delete-after -v $TRAVIS_BUILD_DIR/dist/* deploy@139.59.142.164:/var/www/html/integration-explorer.aepps.com/
+  on:
+    branch: integration-net
 before_install:
 - openssl aes-256-cbc -K $encrypted_90a9ca14a0f9_key -iv $encrypted_90a9ca14a0f9_iv
   -in deploy.enc -out deploy -d
