--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,11 @@ deploy:
   script: rsync -r --delete-after -v $TRAVIS_BUILD_DIR/dist/* deploy@139.59.142.164:/var/www/html/integration-explorer.aepps.com/
   on:
     branch: integration-explorer
+- provider: script
+  skip_cleanup: true
+  script: rsync -r --delete-after -v $TRAVIS_BUILD_DIR/dist/* deploy@139.59.142.164:/var/www/html/republica-explorer.aepps.com/
+  on:
+    branch: republica-pos
 before_install:
 - openssl aes-256-cbc -K $encrypted_90a9ca14a0f9_key -iv $encrypted_90a9ca14a0f9_iv
   -in deploy.enc -out deploy -d
