--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,11 @@ deploy:
   script: rsync -r --delete-after -v $TRAVIS_BUILD_DIR/dist/* deploy@139.59.142.164:/var/www/html/republica-explorer.aepps.com/
   on:
     branch: republica-pos
+- provider: script
+  skip_cleanup: true
+  script: ssh deploy@139.59.142.164 "mkdir -p /var/www/html/BRANCHES.explorer.aepps.com/`echo $TRAVIS_BRANCH | tr '[:punct:]' '-'`/" && rsync -r --delete-after -v $TRAVIS_BUILD_DIR/dist/* deploy@139.59.142.164:/var/www/html/BRANCHES.explorer.aepps.com/`echo $TRAVIS_BRANCH | tr '[:punct:]' '-'`
+  on:
+    all_branches: true
 before_deploy:
 - openssl aes-256-cbc -K $encrypted_90a9ca14a0f9_key -iv $encrypted_90a9ca14a0f9_iv
   -in deploy.enc -out deploy -d
