--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "@aeternity/aepp-components": "github:aeternity/aepp-components#blockchain-explorer",
+    "@aeternity/aepp-components": "2.0.11",
     "@aeternity/aepp-sdk": "0.18.0-0.1.0",
     "lodash": "^4.17.5",
     "vue": "^2.5.2",
