--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
   directories:
    - node_modules
 env:
-- AETERNITY_EPOCH_API_URL='//sdk-testnet.aepps.com/' SHOW_MARKET_STATS=true SHOW_NETWORK_STATS=true
+- VUE_APP_EPOCH_URL='//sdk-testnet.aepps.com/'
 install:
 - travis_wait npm install
 script:
