package.json: update version of aepp-components, catch 404 error for balance

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "npm run lint"
   },
   "dependencies": {
-    "@aeternity/aepp-components": "2.0.11",
+    "@aeternity/aepp-components": "^2.0.13",
     "@aeternity/aepp-sdk": "0.18.0-0.1.1",
     "lodash": "^4.17.5",
     "vue": "^2.5.17",
