--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "vue": "^2.5.17",
     "vue-popperjs": "^1.2.6",
     "vue-router": "^3.0.1",
+    "vue-simple-spinner": "^1.2.8",
+    "vue-wait": "^1.3.2",
     "vuex": "^3.0.1",
     "vuex-loading": "^0.2.2"
   },
