--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "vue": "^2.5.17",
     "vue-popperjs": "^1.2.6",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "vuex-loading": "^0.2.2"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0",
