--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue": "^2.5.17",
     "vue-popperjs": "^1.2.6",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vue-wait": "^1.3.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0",
