--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VUE_APP_EPOCH_URL=//sdk-testnet.aepps.com/
+VUE_APP_EPOCH_URL=https://sdk-testnet.aepps.com/
 VUE_APP_SHOW_MARKET_STATS=true
 VUE_APP_SHOW_NETWORK_STATS=true
