--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VUE_APP_NODE_URL=https://roma-net.mdw.aepps.com/
 VUE_APP_SHOW_MARKET_STATS=false
 VUE_APP_SHOW_NETWORK_STATS=false
+VUE_APP_NETWORK = 'Minerva'
